--- a/dom/trabalhandoComEventos3.html
+++ b/dom/trabalhandoComEventos3.html
@@ -59,8 +59,8 @@
             dropzone.ondrop = function(e) {
                 const id = e.dataTransfer.getData('item-id')
                 const item = document.getElementById(id)
-                // e.target.appendChild(item)
-                dropzone.appendChild(item)
+                e.target.appendChild(item)
+                // dropzone.appendChild(item)
             }
         })
     </script>
